--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,10 +4,11 @@
     "at-rule-no-unknown": [
       true,
       {
-        "ignoreAtRules": ["extends", "tailwind"]
+        "ignoreAtRules": ["extends", "tailwind", "mixin", "include"]
       }
     ]
   },
   "customSyntax": "postcss-scss",
-  "extends": ["stylelint-config-recommended", "stylelint-config-prettier"]
+  "extends": ["stylelint-config-recommended", "stylelint-config-prettier"],
+  "syntax": "scss"
 }
